[gd_scene load_steps=6 format=3 uid="uid://bo5gubxdgbov4"]

[ext_resource type="Script" uid="uid://cld8sidgyvfvi" path="res://scripts/hud.gd" id="1_ahhtf"]
[ext_resource type="Theme" uid="uid://w03an4spcyps" path="res://resources/theme.tres" id="1_oo0fn"]
[ext_resource type="AudioStream" uid="uid://2iv2buj0vs0c" path="res://assets/sfx/ui_feedback.mp3" id="3_5ysmq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5ysmq"]
bg_color = Color(0.23137255, 0.23137255, 0.23137255, 1)
border_width_left = 1
border_width_right = 1
border_width_bottom = 4
border_color = Color(0.5716431, 0.67032766, 0.74050456, 1)
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 4.0
expand_margin_right = 4.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6fi6k"]
bg_color = Color(0.23137255, 0.23137255, 0.23137255, 1)
border_width_left = 2
border_width_top = 8
border_width_right = 2
border_color = Color(0.5716431, 0.67032766, 0.74050456, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
expand_margin_left = 4.0
expand_margin_top = 4.0
expand_margin_right = 4.0

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_oo0fn")
script = ExtResource("1_ahhtf")

[node name="TopPanel" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(240, 25)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -120.0
offset_right = 120.0
offset_bottom = 29.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5ysmq")

[node name="TurnDisplay" type="HBoxContainer" parent="TopPanel"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
size_flags_horizontal = 4

[node name="BottomPanel" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(300, 100)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -40.0
offset_right = 100.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_6fi6k")

[node name="VBoxContainer" type="VBoxContainer" parent="BottomPanel"]
layout_mode = 2

[node name="TurnDecision" type="HFlowContainer" parent="BottomPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
alignment = 1
last_wrap_alignment = 2

[node name="Label" type="Label" parent="BottomPanel/VBoxContainer"]
custom_minimum_size = Vector2(350, 50)
layout_mode = 2
size_flags_vertical = 8
horizontal_alignment = 1
autowrap_mode = 2

[node name="UIFeedback" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_5ysmq")
volume_db = -15.0
